# editors-dream

./: 1.txt  CMakeLists.txt  EditorsDream.pro  binarytree.h  binarytree.template  binarytree.tpp  eaze.txt  editor.cpp  editor.h  editorassistbinarytree.cpp  editorassistbinarytree.h  editorassistheap.cpp  editorassistheap.h  heap.cpp  heap.h  main.cpp  mainwindow.ui  node.h  todo  war_and_peace.txt
include/: binarytree.h  editor.h  editorassistbinarytree.h  editorassistheap.h  heap.h  mainwindow.h  node.h
res/: 2.txt  alice.txt  test.txt  war_and_peace.txt
src/: binarytree.tpp  editor.cpp  editorassistbinarytree.cpp  editorassistheap.cpp  mainwindow.cpp  mainwindow.ui
